syntax = "proto3";

option csharp_namespace = "Messages";

message Employee {
  int32 id = 1;
  int32 badgeNumber = 2;
  string firstName = 3;
  string lastName = 4;
  float vacationAccrualRate = 5;
  float vacationAccrued = 6;
}

message GetAllRequest {}

message GetByBadgeNumberRequest {
  int32 badgeNumber = 1;
}
message EmployeeRequest {
  Employee employee = 1;
}
message EmployeeResponse {
  Employee employee = 1;
}
message AddPhotoRequest {
  bytes data = 1;
}
message AddPhotoResponse {
  bool isOk = 1;
}

service EmployeeService {
  rpc GetByBadgeNumber (GetByBadgeNumberRequest) returns (EmployeeResponse);
  rpc GetAll (GetAllRequest) returns (stream EmployeeResponse);
  rpc Save (EmployeeRequest) returns (EmployeeResponse);
  rpc SaveAll (stream EmployeeRequest) returns (stream EmployeeResponse);
  rpc AddPhoto (stream AddPhotoRequest) returns (AddPhotoResponse);
}